--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   </header>
   <section class="hero">
     <div class="hero-content">
-     <h1 style="font-size:20px; color:orange;">Empower Lives Through Charity</h1>
-      <p>Join us to bring hope and support to vulnerable communities in Uganda. Serving humanity and transformation of communities to poverty free society and economic empowerement.</p>
+     <h1 style="font-size:35px; color:orange;">Empower Lives Through Charity</h1>
+      <p style="font-size:12px;">Join us to bring hope and support to vulnerable communities in Uganda. Serving humanity and transformation of communities to poverty free society and economic empowerement.</p>
       <a href="https://www.gofundme.com/f/building-mosques-and-providing-essential-aid/wa/s?utm_campaign=fp_sharesheet&utm_medium=customer&utm_source=whatsapp&lang=en_GB" class="btn">Donate Now gofundme</a>
     </div>
   </section>
